Edit Makefile, Edit README, Add other filers,Add bin Dir to dotfiles

--- a/README
+++ b/README
@@ -3,4 +3,9 @@
 ##########################
 
 
-rらめ〜〜〜〜きたないからみちゃらめぇぇぇぇ
+
+自分のレポジトリをコピーしただけでは、サブモジュールはコピーされません。
+git submodule init
+git submodule update
+
+をする必要がある
